--- a/styles.css.scss
+++ b/styles.css.scss
@@ -20,7 +20,7 @@
 
 .advertisement {
 	background: #D5A6BD;
-	width: 200px;
+	width: 150px;
 	float:left;
 	margin: 25px 10px 25px 10px;
 	padding: 25px;
@@ -33,7 +33,7 @@
 	}
 
 	img {
-		width: 150px;
+		width: 100px;
 		height: 250px;
 		padding: 25px;
 
@@ -58,5 +58,6 @@
 footer {
 	border: 1px solid red;
 	position: fixed;
+	clear: both;
 	bottom: 0;
 }
